Adding option to select which include files should get documented (2nd attempt)
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@6060 7226f50c-d813-0410-99bf-979b288ab488

--- a/install
+++ b/install
@@ -103,7 +103,7 @@ else
 fi
 
 # Compile libraries
-if ${MAKE} -f ${BUILDDIR}/share/RAVL/QMake/QMake.mk MAKEHOME=${BUILDDIR}/share/RAVL/QMake BASEINSTALL=1 INSTALLHOME=${BUILDDIR} PROJECT_OUT=${INSTALL_SITE}  ROOTDIR=${BUILDDIR} ${BUILDTYPE} ${TARGETARC}  FULLBUILDSRC='BASE_VAR=none' ; then 
+if ${MAKE} -f ${BUILDDIR}/share/RAVL/QMake/QMake.mk MAKEHOME=${BUILDDIR}/share/RAVL/QMake BASEINSTALL=1 INSTALLHOME=${BUILDDIR} PROJECT_OUT=${INSTALL_SITE}  ROOTDIR=${BUILDDIR} ${BUILDTYPE} ${TARGETARC}  FULLBUILDSRC='BASE_VAR=none' INCLUDEDIR=${BUILDDIR}/include; then 
   true
 else
   echo "ERROR: Failed to build libraries. "
