--- a/install
+++ b/install
@@ -103,7 +103,7 @@ else
 fi
 
 # Compile libraries
-if ${MAKE} -f ${BUILDDIR}/share/RAVL/QMake/QMake.mk MAKEHOME=${BUILDDIR}/share/RAVL/QMake BASEINSTALL=1 INSTALLHOME=${BUILDDIR} PROJECT_OUT=${INSTALL_SITE} BUILD_TAG= ROOTDIR=${BUILDDIR} ${BUILDTYPE} ${TARGETARC} FULLBUILDSRC='BASE_VAR=none' INCLUDEDIR=${BUILDDIR}/include/Ravl; then 
+if ${MAKE} -f ${BUILDDIR}/share/RAVL/QMake/QMake.mk MAKEHOME=${BUILDDIR}/share/RAVL/QMake BASEINSTALL=1 INSTALLHOME=${BUILDDIR} PROJECT_OUT=${INSTALL_SITE} BUILD_TAG= ROOTDIR=${BUILDDIR} ${BUILDTYPE} ${TARGETARC} FULLBUILDSRC='BASE_VAR=none' INCLUDEDIR=${BUILDDIR}/include; then 
   true
 else
   echo "ERROR: Failed to build libraries. "
