--- a/README
+++ b/README
@@ -2,33 +2,40 @@
 VERSION
 -------
 
-This repository (git on source forge) contains code for the unstable development version of RAVL.
-
-If your looking for the stable version you should use the subversion repository found on source forge. 
+This repository (git on source forge) contains code for the unstable development
+version of RAVL. If your looking for the stable version you should use the
+subversion repository found on source forge. 
 
 INSTALLATION 
 ------------
 
-Start with the code found in the RAVL2 directory, instructions can be found there.
+Start with the code found in the RAVL2 directory, instructions can be found
+there.
 
 If you need  use from the Development directory it is recommended you build it
 with the normal RAVL qm command.
 
+CONTRIBUTING CODE
+-----------------
+
+If you want to contribute new sections of code it should create a directory
+under Development/(username)/...
+
+Ideally code in the development directory should be LGPL, or a compatible
+license. Code under other licenses may be placed there, but should be clearly
+labeled both with a file called LICENSE in its root directory and headers on all
+the files.
+
+Once the code is there it can be reviewed tested and a consensus reached about
+where it should go.
 
 DIRECTORY STRUCTURE
 -------------------
 
-There are two directories in the repository.
+There are currently two directories in the repository.
 
- RAVL2       - All code in this repository should compile. 
- Development - This is intended for code that may form the basis of contributions.
-
-Ideally code in the development directory should be LGPL, or a compatible license. Code under other licenses
-may be placed there, but should be clearly labeled both with a file called LICENSE in its root directory and
-headers on all the files.
-
-If you wish to add new code to 'Development' in a directory named after your source forge login. We may add
-further directories to structure contributions as required.
+RAVL2       -All code in this repository should compile.
+Development -This is intended for code that may form the basis of contributions.
 
 
       
